--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,10 +1,12 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: ;
+    font-family: "Montserrat", serif;
 }
 :root {
     --orange-light: #FFB74D;
@@ -16,38 +18,53 @@
 }
 
 header {
-    background-color: var(--orange-light);
-         
+    background-image:linear-gradient(to bottom, #FFB74D,#F57C00);
+    color: white;
+    display: flex; 
+    flex-flow: column nowrap; /*em linha sem quebra*/
+     /*alinhamento consid o cross-assis*/   
+    
 }
 
-
+html,body {
+    height: 100vh;
+    width: 100vw;
+}
 
 .container {
     display: flex;
     flex-flow: column nowrap;
-    
-}
-.filho {
-    display: flex;
-       
-}
-.filho > img {
-    border: 1px dotted black;
-    align-items: flex-start;  
-}
-.filho > h1 {
-    border: 1px dotted black;
-    align-self: ;
+        
 }
 
-.filho > p {
+header > img {
+    border: 1px dotted black;
+    align-self: center;
+    
+     
+}
+.container > h1 {
+    border: 1px dotted black;
+    align-self: center;
+    font-size: 3em;
+    
+}
+
+.container > p {
     border: 1px dotted black; 
+    text-align: center;
+    font-size: 1.3em;
 }
-nav {
-    background-color: var(--orange-dark)
-}
+    
+.menu {
+    background-color: var(--white);
+    border: 1px dotted black;
+    display: flex;
+}  
+    
 
 section {
     background-color: var(--gray-light);
     border: 1px 1px 1px black;
+    border: 1px dotted black;
 }
