--- a/estilos/style.css
+++ b/estilos/style.css
@@ -95,7 +95,7 @@ main {
 
 .itensprincipal {
     display: flex;
-    flex-flow: column wrap;   
+    flex-flow: row wrap;   
     
 }
 
@@ -113,7 +113,7 @@ section {
     border: 1px dotted black;  
     border-radius: 8px;
     margin: 10px; 
-    width: 90vw;
+    width: 450px;
     height: 230px;
     display: flex;
     flex-flow: column nowrap;
