--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,6 +30,7 @@ header {
 html,body {
     height: 100vh;
     width: 100vw;
+    font-family: 1.5em;
 }
 
 .container {
@@ -48,16 +49,16 @@ header > img {
 .container > h1 {
     border: 1px dotted rgba(0, 0, 0, 0.671);
     align-self: center;
-    font-size: 3em;
+    font-size: 5em;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.671);
 } 
 
 .container > p {
     border: 1px dotted black; 
     text-align: center;
-    color: white;
+    color: yellow;
     font-family: "Open Sans", serif;
-    font-size: 2.3em;
+    font-size: 3.5em;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.671);
     margin: 20px;    
 }
@@ -65,9 +66,11 @@ header > img {
 nav {
     background-color:  white;
     border: 1px dotted black;
+    height: 45px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-around;
+    align-items: center;
     
 }  
 
