--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,7 +24,8 @@ header {
     background-color:  #00a8ff;/*#462B72;*/
     color: var(--orange-main);
     display: flex; 
-    flex-flow: column nowrap; /*em linha sem quebra*/     
+    flex-flow: column nowrap; /*em linha sem quebra*/
+       
 }
 
 html,body {
@@ -49,6 +50,7 @@ header > img {
 .container > h1 {
     border: 1px dotted rgba(0, 0, 0, 0.671);
     align-self: center;
+    text-align: center;
     font-size: 5em;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.671);
 } 
@@ -60,7 +62,7 @@ header > img {
     font-family: "Open Sans", serif;
     font-size: 3.5em;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.671);
-    margin: 20px;    
+      
 }
     
 nav {
