--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,7 +25,7 @@ header {
     color: var(--orange-main);
     display: flex; 
     flex-flow: column nowrap; /*em linha sem quebra*/
-       
+     
 }
 
 html,body {
@@ -37,7 +37,10 @@ html,body {
 .container {
     display: flex;
     flex-flow: column nowrap;
-        
+    align-items: center;
+    gap: 30px;  
+    margin-bottom: 50px;
+   
 }
 
 header > img {
@@ -49,19 +52,23 @@ header > img {
 }
 .container > h1 {
     border: 1px dotted rgba(0, 0, 0, 0.671);
-    align-self: center;
+    
     text-align: center;
-    font-size: 5em;
+    font-size: 4.5em;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.671);
+    flex-shrink: 1;
+    flex-grow: 1;
 } 
 
 .container > p {
     border: 1px dotted black; 
     text-align: center;
     color: yellow;
-    font-family: "Open Sans", serif;
-    font-size: 3.5em;
+    font-family: "Open Sans", serif;   
+    font-size: 2.5em;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.671);
+    flex-shrink: 1;
+    flex-grow: 1;
       
 }
     
