--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,7 +21,7 @@
 }
 
 header {
-    background-color:  #00a8ff;/*#462B72;*/
+    background-color:#44BFE5;/*#462B72;*/
     color: var(--orange-main);
     display: flex; 
     flex-flow: column nowrap; /*em linha sem quebra*/
@@ -34,13 +34,14 @@ html,body {
     font-family: 1.5em;
 }
 
+
 .container {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     gap: 30px;  
     margin-bottom: 50px;
-   
+    
 }
 
 header > img {
@@ -52,24 +53,24 @@ header > img {
 }
 .container > h1 {
     border: 1px dotted rgba(0, 0, 0, 0.671);
-    
     text-align: center;
     font-size: 4.5em;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.671);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.671);
     flex-shrink: 1;
     flex-grow: 1;
 } 
 
 .container > p {
+
     border: 1px dotted black; 
     text-align: center;
-    color: yellow;
+    color: white;
     font-family: "Open Sans", serif;   
     font-size: 2.5em;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.671);
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.671);
     flex-shrink: 1;
     flex-grow: 1;
-      
+    
 }
     
 nav {
@@ -88,19 +89,20 @@ nav > a {
     text-decoration: none;
     font-weight:bolder;
     font-size: 1.3em;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.671);
 }
 .fa-whatsapp {
     color: green;
-    font-weight: 
-    
-    
+    font-weight:   
 }
+
 main {
     display: flex;
     flex-flow: column wrap;
     align-items: center; 
     color:#462B72;
     margin: 10px;
+    
     
 }
 
@@ -129,7 +131,7 @@ section {
     height: 230px;
     display: flex;
     flex-flow: column nowrap;
-   */
+
 }
 section > h2 {
     text-align: center;
@@ -141,18 +143,22 @@ section > p {
     line-height: 1cm;
     text-align: justify;
     flex-shrink: 1;
-    flex-grow: 1;
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+    flex-grow: 1;   
+  
+}
 
+.simulacao {
+    
+    font-size: 3em;
+    width: 100vw;
+    height: 400px;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: flex-start;
+    margin-top: 20px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.671); 
+}
+
+.simulacao.itens {
     
 }
