--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,18 +20,15 @@
     --lilas: #462B72;
 }
 
+
+
 header {
     background-color:#44BFE5;/*#462B72;*/
     color: var(--orange-main);
     display: flex; 
     flex-flow: column nowrap; /*em linha sem quebra*/
-     
-}
 
-html,body {
-    height: 100vh;
-    width: 100vw;
-    font-family: 1.5em;
+     
 }
 
 
@@ -93,26 +90,16 @@ nav > a {
 }
 .fa-whatsapp {
     color: green;
-    font-weight:   
+    
 }
 
 main {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column nowrap;
     align-items: center; 
-    color:#462B72;
-    margin: 10px;
-    
+    color:#462B72; 
     
 }
-
-
-.itensprincipal {
-    display: flex;
-    flex-flow: row wrap;   
-    
-}
-
 
 main > h2 {
     align-self: flex-start;
@@ -120,6 +107,14 @@ main > h2 {
     margin: 10px;
         
 }
+
+.itensprincipal {
+    display: flex;
+    flex-flow: column wrap;   
+    align-items: center;
+    
+}
+
 
 section {
 
@@ -131,11 +126,12 @@ section {
     height: 230px;
     display: flex;
     flex-flow: column nowrap;
-
+    align-items: center;
 }
 section > h2 {
     text-align: center;
     margin-bottom: 10px;
+  
 }
 section > p {
     color: black;
@@ -148,17 +144,31 @@ section > p {
 }
 
 .simulacao {
-    
-    font-size: 3em;
+    border: 1px dotted black; 
+    font-size: 2em;
     width: 100vw;
-    height: 400px;
+    height:300px;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column nowrap;
+    gap: 10px;
     justify-content: flex-start;
     margin-top: 20px;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.671); 
+    padding-left: 20px;
 }
 
-.simulacao.itens {
+ .button {  
+    border: 1px solid black;
+    width: 200px;
+    text-align: center;
+    border-radius: 8px;
+    display: flex;
+    flex-flow: column wrap;
+    margin-left: 80px;
+}
+
+.button > a {
+    text-decoration: none;
+    background-color: #F57C00;
     
 }
