--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,8 +20,15 @@
     --lilas: #462B72;
 }
 
+body,html {
+    width: 100vw;
+    height: 100vh;
+}
 
-
+body {
+    display: flex;
+    flex-flow: column nowrap;
+}
 header {
     background-color:#44BFE5;/*#462B72;*/
     color: var(--orange-main);
@@ -128,6 +135,7 @@ section {
     flex-flow: column nowrap;
     align-items: center;
 }
+
 section > h2 {
     text-align: center;
     margin-bottom: 10px;
