--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,12 +29,12 @@ body {
     display: flex;
     flex-flow: column nowrap;
 }
+
 header {
     background-color:#44BFE5;/*#462B72;*/
     color: var(--orange-main);
     display: flex; 
     flex-flow: column nowrap; /*em linha sem quebra*/
-
      
 }
 
@@ -129,15 +129,20 @@ section {
     border: 1px dotted black;  
     border-radius: 8px;
     margin: 10px; 
-    width: 500px;
+    /*width: 600px;*/
     height: 230px;
     display: flex;
-    flex-flow: column nowrap;
-    align-items: center;
+    flex-flow: row wrap; /*colunn nowrap*/
+    justify-content: center;
 }
+ .empres {
+    flex-grow: 1;
+    flex-shrink: 1;
+    
+ }
 
 section > h2 {
-    text-align: center;
+    /*text-align: center;*/
     margin-bottom: 10px;
   
 }
@@ -145,9 +150,7 @@ section > p {
     color: black;
     font-size: 1.5em;
     line-height: 1cm;
-    text-align: justify;
-    flex-shrink: 1;
-    flex-grow: 1;   
+    /*text-align: justify;*/
   
 }
 
