--- a/estilos/style.css
+++ b/estilos/style.css
@@ -129,20 +129,16 @@ section {
     border: 1px dotted black;  
     border-radius: 8px;
     margin: 10px; 
-    /*width: 600px;*/
+    width: 600px;
     height: 230px;
     display: flex;
     flex-flow: row wrap; /*colunn nowrap*/
     justify-content: center;
 }
- .empres {
-    flex-grow: 1;
-    flex-shrink: 1;
-    
- }
+
 
 section > h2 {
-    /*text-align: center;*/
+    text-align: center;
     margin-bottom: 10px;
   
 }
@@ -150,7 +146,7 @@ section > p {
     color: black;
     font-size: 1.5em;
     line-height: 1cm;
-    /*text-align: justify;*/
+    text-align: justify;
   
 }
 
