--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,16 +31,9 @@ body {
     
 }
 
-#icone-menu {
-    background-color: #333333;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    color: white;
-}
 
 header {
-    background-color:#44BFE5;/*#462B72;*/
+    background-color:#462B72;
     color: var(--orange-main);
     display: flex; 
     flex-flow: column wrap; /*em linha sem quebra*/
@@ -52,7 +45,7 @@ header {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    gap: 30px;  
+    gap: 20px;  
     margin-bottom: 50px;
     
 }
@@ -67,10 +60,11 @@ header > img {
 .container > h1 {
     border: 1px dotted rgba(0, 0, 0, 0.671);
     text-align: center;
-    font-size: 2em;
+    font-size: 2.3em; 
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.671);
     flex-shrink: 1;
     flex-grow: 1;
+    
 } 
 
 .container > p {
@@ -79,7 +73,7 @@ header > img {
     text-align: center;
     color: white;
     font-family: "Open Sans", serif;   
-    font-size: 2em;
+    font-size: 1.3em;
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.671);
     flex-shrink: 1;
     flex-grow: 1;
@@ -89,16 +83,25 @@ header > img {
 nav {
     background-color:  white;
     border: 1px dotted black;
-    height: 45px;
+    margin-top: 20px;
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;  
+    flex-flow: column nowrap;
+    justify-content: flex-start ;  
     align-items: center;
     
 }  
 
+#icone-menu {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    margin-top: 20px;
+
+}
 nav > a {
-    color: var(--orange-dark);
+    display: none;
+    margin: 10px;
+    color: orangered;
     text-decoration: none;
     font-weight:bolder;
     font-size: 1.2em;
