--- a/estilos/style.css
+++ b/estilos/style.css
@@ -99,7 +99,8 @@ nav {
 
 }
 nav > a {
-    display: none;
+    display: flex;
+    align-items: center;
     margin: 10px;
     color: orangered;
     text-decoration: none;
@@ -107,7 +108,12 @@ nav > a {
     font-size: 1.2em;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.671);
 }
-.fa-whatsapp {
+
+
+.fa-brands {
+    
+    align-self:center;
+    margin-left: 5px;
     color: green;
     
 }
